spectec/test/elab/neg/ctx-type-redefined.spectec
;; Triggers ctx/ctx.ml:207 — forward-declaring the same syntax name twice.

syntax foo
syntax foo
